Fix 2 headers being compiled in VS 2013 and 2015
The headers state_population_trigger.h and change_state_effect.h were marked as compilable source code (translation units). This led to linker errors, because they generated object files, which shadowed their .cpp counterparts.

--- a/projects/VS2013/Menge/MengeCore.vcxproj
+++ b/projects/VS2013/Menge/MengeCore.vcxproj
@@ -430,8 +430,8 @@ xcopy /y $(TargetPath) $(ExeDir)
     <ClInclude Include="$(SrcDir)\mengeCore\Agents\Events\EventTriggerFactory.h" />
     <ClInclude Include="$(SrcDir)\mengeCore\Agents\Events\StateEvtTrigger.h" />
     <ClInclude Include="$(SrcDir)\mengeCore\Agents\Events\StateMemberTarget.h" />
-    <ClCompile Include="$(SrcDir)\mengeCore\Agents\Events\state_population_trigger.h" />
-    <ClCompile Include="$(SrcDir)\mengeCore\Agents\Events\change_state_effect.h" />
+    <ClInclude Include="$(SrcDir)\mengeCore\Agents\Events\state_population_trigger.h" />
+    <ClInclude Include="$(SrcDir)\mengeCore\Agents\Events\change_state_effect.h" />
     <ClInclude Include="$(SrcDir)\mengeCore\Agents\ObstacleSets\ExplicitObstacleSet.h" />
     <ClInclude Include="$(SrcDir)\mengeCore\Agents\ObstacleSets\ListObstacleSet.h" />
     <ClInclude Include="$(SrcDir)\mengeCore\Agents\ObstacleSets\NavMeshObstacleSet.h" />
