Adding movable goals
This allows goals to move w.r.t. time.

1. VelComponent base class provides mechanism for handling moving goals.
2. It is invoked by the state prior to calling setPrefVelocity
3. SimulatorBase and SimulatorInterface now integrate goal positions
   - Currently takes a timestep -- that may not be ideal.
   - FSM, GoalSet, and Goal have the supporting infrastructure for
     advancing goal position.
4. Adds a moving goal ("path" goal). It moves along a specified, piecewise
   linear path.
5. Adds a "path_goal" example illustrating the path goal.
   - adds two paths: one closed and one open. Agents head to them with a
     "goal" velocity component.
   - Add another path that an agent moves towards on a roadmp.
6. Update visualization; path goal can draw its goal geometry.
7. Updated road map vel component to update based on goal movement.
8. Updated nav mesh vel component to update based on goal movement.

--- a/projects/VS2017/Menge/MengeCore.vcxproj
+++ b/projects/VS2017/Menge/MengeCore.vcxproj
@@ -367,6 +367,7 @@ xcopy /y $(TargetPath) $(ExeDir)
     <ClCompile Include="$(SrcDir)\MengeCore\Agents\ProfileSelectors\profile_selector_weighted.cpp" />
     <ClCompile Include="$(SrcDir)\MengeCore\Agents\Events\change_state_effect.cpp" />
     <ClCompile Include="$(SrcDir)\MengeCore\Agents\Events\state_population_trigger.cpp" />
+    <ClCompile Include="$(SrcDir)\MengeCore\BFSM\Goals\GoalPath.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(SrcDir)\mengeCore\Core.h" />
@@ -571,6 +572,7 @@ xcopy /y $(TargetPath) $(ExeDir)
     <ClInclude Include="$(SrcDir)\MengeCore\data_set_selector.h" />
     <ClInclude Include="$(SrcDir)\MengeCore\Agents\Events\change_state_effect.h" />
     <ClInclude Include="$(SrcDir)\MengeCore\Agents\Events\state_population_trigger.h" />
+    <ClInclude Include="$(SrcDir)\MengeCore\BFSM\Goals\GoalPath.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="tinyxml_lib.vcxproj">
